--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -23,11 +23,11 @@
 
 @layer components {
   .primaryBtn {
-    @apply p-3 bg-orange rounded border border-dark;
+    @apply p-3 bg-orange rounded border border-dark text-center;
   }
 
   .secondaryBtn {
-    @apply p-3 rounded border border-dark;
+    @apply p-3 rounded border border-dark text-center;
   }
 
   .section__skyblue {
