estilos para botón de proveedores

--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -30,6 +30,10 @@
     @apply p-3 rounded border border-dark text-center;
   }
 
+  .btnProviders {
+    @apply p-3 bg-skyBlue rounded border border-dark text-center hover:bg-skyBlue;
+  }
+
   .section__skyblue {
     @apply py-[46px] px-[32px] bg-skyBlue/25 space-y-[32px];
   }
